Dispatcher to use caller thread instead of dedicated scheduler thread