@@ -30,9 +30,9 @@ class FutureCollectorsTest {
 
     @Test
     void shouldCollectToList() {
-        List<Integer> list = Arrays.asList(1, 2, 3);
+        var list = Arrays.asList(1, 2, 3);
 
-        CompletableFuture<List<Integer>> result = list.stream()
+        var result = list.stream()
           .map(i -> CompletableFuture.supplyAsync(() -> i))
           .collect(ParallelCollectors.toFuture(toList()));
 
@@ -41,30 +41,31 @@ class FutureCollectorsTest {
 
     @Test
     void shouldShortcircuit() {
-        List<Integer> list = IntStream.range(0, 10).boxed().collect(toList());
+        var list = IntStream.range(0, 10).boxed().toList();
 
-        ExecutorService e = Executors.newFixedThreadPool(10);
-
-        CompletableFuture<List<Integer>> result = list.stream()
-          .map(i -> CompletableFuture.supplyAsync(() -> {
-              if (i != 9) {
-                  try {
-                      Thread.sleep(1000);
-                  } catch (InterruptedException ex) {
-                      ex.printStackTrace();
+        try (var e = Executors.newFixedThreadPool(10)) {
+            CompletableFuture<List<Integer>> result
+              = list.stream()
+              .map(i -> CompletableFuture.supplyAsync(() -> {
+                  if (i != 9) {
+                      try {
+                          Thread.sleep(1000);
+                      } catch (InterruptedException ex) {
+                          ex.printStackTrace();
+                      }
+                      return i;
+                  } else {
+                      throw new RuntimeException();
                   }
-                  return i;
-              } else {
-                  throw new RuntimeException();
-              }
-          }, e))
-          .collect(ParallelCollectors.toFuture(toList()));
+              }, e))
+              .collect(ParallelCollectors.toFuture(toList()));
 
-        assertTimeout(Duration.ofMillis(100), () -> {
-            try {
-                result.join();
-            } catch (CompletionException ex) {
-            }
-        });
+            assertTimeout(Duration.ofMillis(100), () -> {
+                try {
+                    result.join();
+                } catch (CompletionException ex) {
+                }
+            });
+        }
     }
 }
